--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Note Share</string>
     <string name="title">Title</string>
+    <string name="title_activity_sticky_edit">StickyEditActivity</string>
 </resources>
