makes event data storable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="event_time">(hr:min)</string>
     <string name="event_location">Location:</string>
     <string name="event_description">Describe the event here..</string>
+    <string name="event_create">Create Event</string>
 </resources>
