--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="event_location">Location:</string>
     <string name="event_description">Describe the event here..</string>
     <string name="event_create">Create Event</string>
+    <string name="event_importance">How important is your event?: </string>
 </resources>
